--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "chart.js": "^3.9.1",
         "moment": "^2.29.4"
     }
 }
